--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Susan Allen CPA | Professional Financial Consulting</title>
+    <title>Ordia Consulting Services | Professional Financial Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --brand-blue: #2563eb;
-            --brand-dark: #020617;
+            --brand-navy: #001242;
+            --brand-lavender: #8a7eb5;
+            --brand-blue: #001242; /* Primary action color */
         }
         body {
             font-family: 'Inter', sans-serif;
@@ -22,21 +23,21 @@
             font-family: 'Playfair Display', serif;
         }
         .glass {
-            background: rgba(255, 255, 255, 0.7);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(16px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
         .dark-glass {
-            background: rgba(15, 23, 42, 0.8);
+            background: rgba(0, 18, 66, 0.85);
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
         .mesh-gradient {
-            background-color: #020617;
+            background-color: #001242;
             background-image: 
-                radial-gradient(at 0% 0%, hsla(222,47%,11%,1) 0, transparent 50%), 
-                radial-gradient(at 100% 0%, hsla(217,91%,60%,0.15) 0, transparent 50%),
-                radial-gradient(at 0% 100%, hsla(217,91%,60%,0.05) 0, transparent 50%);
+                radial-gradient(at 0% 0%, #001242 0, transparent 50%), 
+                radial-gradient(at 100% 0%, rgba(138, 126, 181, 0.2) 0, transparent 50%),
+                radial-gradient(at 0% 100%, rgba(138, 126, 181, 0.1) 0, transparent 50%);
         }
         
         /* Smooth Entrance Animations */
@@ -68,7 +69,6 @@
             transform: translateX(0);
         }
 
-        /* Animated underline */
         .link-underline {
             position: relative;
         }
@@ -86,7 +86,6 @@
             width: 100%;
         }
 
-        /* Custom Scrollbar */
         ::-webkit-scrollbar {
             width: 8px;
         }
@@ -94,11 +93,11 @@
             background: #f1f5f9;
         }
         ::-webkit-scrollbar-thumb {
-            background: #cbd5e1;
+            background: #8a7eb5;
             border-radius: 10px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #94a3b8;
+            background: #001242;
         }
     </style>
     <script type="importmap">
@@ -112,7 +111,7 @@
     }
     </script>
 </head>
-<body class="bg-white text-slate-900 selection:bg-blue-600 selection:text-white">
+<body class="bg-white text-slate-900 selection:bg-[#8a7eb5] selection:text-white">
     <div id="root"></div>
 </body>
 </html>
