feat: Implement loading screen and enhance animations
Introduces a new loading screen component to provide a smoother initial user experience. Adds several new CSS animations for improved visual feedback and engagement, including drawing swooshes and pulsing effects for the logo. Updates service images and refactors image error handling for robustness.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
             animation: float 4s ease-in-out infinite;
         }
 
+        @keyframes drawSwoosh {
+            0% { stroke-dashoffset: 1000; }
+            100% { stroke-dashoffset: 0; }
+        }
+        .animate-draw {
+            stroke-dasharray: 1000;
+            stroke-dashoffset: 1000;
+            animation: drawSwoosh 2s ease-out forwards;
+        }
+
+        @keyframes pulseLogo {
+            0%, 100% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.05); opacity: 0.8; }
+        }
+        .animate-pulse-slow {
+            animation: pulseLogo 3s ease-in-out infinite;
+        }
+
+        .fade-out {
+            animation: fadeOut 0.8s ease-out forwards;
+        }
+        @keyframes fadeOut {
+            from { opacity: 1; }
+            to { opacity: 0; visibility: hidden; }
+        }
+
         .link-hover {
             position: relative;
         }
