--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "express": "https://esm.sh/express@^5.2.1",
     "url": "https://esm.sh/url@^0.11.4",
-    "path": "https://esm.sh/path@^0.12.7"
+    "path": "https://esm.sh/path@^0.12.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
