feat: Implement dynamic SEO metadata and scroll reveals
Enhance SEO by dynamically updating meta tags and the page title based on the current view (service or news detail).
Implement scroll-triggered animations for content reveal, improving user engagement and visual appeal.
Also, initialize general SEO meta tags in the index.html.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordia Consulting Services | Professional Financial Solutions</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" id="meta-description" content="Ordia Consulting Services (OCS) provides expert Outsourced CPA, tax planning, and management consulting solutions for construction, healthcare, and non-profits.">
+    <meta name="keywords" content="Outsourced CPA, Tax Planning, Construction Accounting, Healthcare Financials, Non-Profit Audit, Ordia Consulting">
+    
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" id="og-title" content="Ordia Consulting Services">
+    <meta property="og:description" id="og-description" content="Professional Financial Solutions & Technical CPA Strategy.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&q=80&w=1200">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
