feat: Add favicon and refactor About section
Introduces a favicon for brand recognition and makes adjustments to the About section for improved layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordia Consulting Services | Professional Financial Solutions</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 150 150'%3E%3Ccircle cx='75' cy='75' r='70' fill='%232563eb' /%3E%3Cpath d='M-5 90 Q 75 75 145 15' stroke='white' stroke-width='10' fill='none' stroke-linecap='round' /%3E%3Crect x='45' y='85' width='15' height='45' fill='%23003366' rx='2' /%3E%3Crect x='75' y='65' width='15' height='65' fill='%23003366' rx='2' /%3E%3Crect x='105' y='45' width='15' height='85' fill='%23003366' rx='2' /%3E%3C/svg%3E">
+
     <!-- SEO Meta Tags -->
     <meta name="description" id="meta-description" content="Ordia Consulting Services (OCS) provides expert Outsourced CPA, tax planning, and management consulting solutions for construction, healthcare, and non-profits.">
     <meta name="keywords" content="Outsourced CPA, Tax Planning, Construction Accounting, Healthcare Financials, Non-Profit Audit, Ordia Consulting">
