--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
             --brand-soft-blue: #eef2ff;
         }
         html {
-            /* Increase base font size for better readability on modern displays */
-            font-size: 18px;
+            /* Increased base font size for premium professional feel and better accessibility */
+            font-size: 20px;
+        }
+        @media (max-width: 1024px) {
+            html {
+                font-size: 18px;
+            }
         }
         @media (max-width: 768px) {
             html {
-                font-size: 16px;
+                font-size: 17px;
             }
         }
         body {
@@ -122,7 +127,6 @@
             width: 100%;
         }
 
-        /* Glass Shine Effect for Headings */
         .glass-shine {
             position: relative;
             background: linear-gradient(
