refactor: Adjust typography and header spacing
Fine-tune font sizes across various breakpoints for a more balanced professional aesthetic. Modify header padding and logo size to enhance visual hierarchy and responsiveness, particularly when scrolling.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             --brand-soft-blue: #eef2ff;
         }
         html {
-            /* Increased base font size for premium professional feel and better accessibility */
-            font-size: 20px;
+            /* Balanced base font size for premium professional feel */
+            font-size: 19px;
         }
         @media (max-width: 1024px) {
             html {
@@ -40,7 +40,7 @@
         }
         @media (max-width: 768px) {
             html {
-                font-size: 17px;
+                font-size: 16.5px;
             }
         }
         body {
